// Callback service gRPC schema.

syntax = "proto3";

package callback;

// Service for receiving callbacks from a media server.
service Callback {
  // Fires when a certain callback event happens on a media server.
  rpc OnEvent (Request) returns (Response);
}

// Request with a fired callback event and its meta information.
message Request {
  // FID (Full ID) of the media `Element`, the occurred event is related to.
  string fid = 1;
  // Datetime when the event occurred.
  string at = 2;

  // Occurred event.
  oneof event {
    OnJoin on_join = 3;
    OnLeave on_leave = 4;
    OnStart on_start = 5;
    OnStop on_stop = 6;
  }
}

// Media type of the traffic which starts/stops flowing in some Endpoint.
enum MediaType {
  /// Started/stopped audio traffic.
  AUDIO = 0;

  /// Started/stopped video traffic.
  VIDEO = 1;

  /// Started/stopped audio and video traffic.
  BOTH = 2;
}

// Media direction of the Endpoint for which OnStart or OnStop Control API callback
// was received.
enum MediaDirection {
  // Endpoint is a publisher.
  PUBLISH = 0;

  // Endpoint is a player.
  PLAY = 1;
}

// Event which fires when Endpoint starts sending/receiving media traffic.
message OnStart {
  // Media type of the traffic which starts flowing in some Endpoint.
  MediaType media_type = 1;

  // Media direction of the Endpoint for which this callback was received.
  MediaDirection media_direction = 2;
}

// Event which fires when Endpoint stops sending/receiving media traffic.
message OnStop {
  // Media type of the traffic which stops flowing in some Endpoint.
  MediaType media_type = 1;
  // Media Endpoint for which this callback was received.
  MediaDirection media_direction = 2;
  // Reason of why Endpoint was stopped.
  Reason reason = 3;

  // Reason of why some Endpoint was stopped.
  enum Reason {
    // All traffic of some Endpoint was stopped flowing.
    TRAFFIC_NOT_FLOWING = 0;

    // Endpoint was muted.
    MUTED = 1;

    // Some traffic flows within Endpoint, but incorrectly.
    WRONG_TRAFFIC_FLOWING = 2;

    // Traffic stopped because Endpoint was removed.
    ENDPOINT_REMOVED = 3;
  }
}

// Empty response of the `Callback` service.
//
// We don't use `google.protobuf.Empty` to be able to add some fields (if
// necessary) in the future.
message Response {}

// Event notifying about a `Member` joining a `Room`.
message OnJoin {}

// Event notifying about a `Member` leaving its `Room`.
message OnLeave {
  // Reason of why the `Member` leaves.
  Reason reason = 1;

  // Possible reasons of why a `Member` leaves its `Room`.
  enum Reason {
    // `Member` was disconnected normally.
    DISCONNECTED = 0;

    // Connection with the `Member` was lost.
    LOST = 1;

    // `Member` was forcibly disconnected by a media server.
    KICKED = 2;

    // Media server was shut down.
    SHUTDOWN = 3;
  }
}
